  specify -S <file> to specify which files in the downloaded rules 
  archive(s) to search for new variables. If -S is not specified, only 
  snort.conf is searched, just like before. As usual, no variable 
  merge is done unless -U is specified. You may specify multiple
  -S <file> arguments to search for variables in multiple files, e.g. 
  "... -S snort.conf -S foo.conf ...".
o Obfuscate the oinkcode when printing URLs, unless running in verbose
  mode.
o Added ability to grab rules files from a local directory by 
  specifying dir://<directory> as URL.
o Suppress warnings about using modifysid on non-existent SIDs when 
  running in quiet mode.
o Misc improvements to the config file parser.
o Make contrib/addmsg.pl handle some multi-line statements.



Oinkmaster v1.2 - 20050417
~~~~~~~~~~~~~~~~~~~~~~~~~~
o Slightly improved modifysid/template documentation and examples.
  For example, added a new template to disable a SID but only if it has 
  a specific revision number so you can disable a rule temporarily and 
  automatically start using it again if it becomes updated. Thanks to 
  Russell Fulton for this suggestion.
o Suppress warnings about non-matching modifysid expressions when
  running in super quiet mode (-Q).
o Permit .tgz suffix for rules archive.
o Permit filename as argument to modifysid (and use_template) to apply
  a substitution expression on all rules in the specified files(s).
o You can now download multiple rules archives from different URLs at
  the same time, either by specifying several -u <url> on the command
  line or by using several url=<url> directives in the Oinkmaster
  configuration file(s). See the default oinkmaster.conf and the FAQ
  for more information. 
o Many updates to the FAQ, especially regarding how to update rules 
  from multiple sources. Also added info about how to use Oinkmaster
  after Sourcefire changed the license of the rules.
o Because of the license change, no URL is specified in the default