@@ -189,8 +189,7 @@ variables but you can override this with the
 .B -S
 .I file
 argument. If you download from multiple URLs, Oinkmaster will look for
-a snort.conf in each downloaded rules archive. Note that variable
-definitions that span over multiple lines are currently not supporeted.
+a snort.conf in each downloaded rules archive.
 .IP "\fB-v
 Run in verbose/debug mode. Should probably only be used in case you need
 to debug your settings, like verifying complex modifysid statements.
